--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,6 +17,9 @@
     <link rel="preload" href="{{ '/assets/css/non-screen.css' | relative_url }}" as="style">
     <link rel="preload" href="{{ '/assets/css/main.css?v=' | append: site.github.build_revision | relative_url }}" as="style">
 
+    <link rel="preload" href="{{ '/assets/fonts/opensans-bolditalic-webfont.woff' | relative_url }}" as="font">
+    <link rel="preload" href="{{ '/assets/fonts/opensans-extrabold-webfont.woff' | relative_url }}" as="font">
+
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen">
     <link rel="stylesheet" href="{{ '/assets/css/mobile.css' | relative_url }}" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="{{ '/assets/css/non-screen.css' | relative_url }}" media="handheld, only screen and (max-device-width:640px)">
