Use _ as underline syntax

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -70,12 +70,14 @@ sup:before {
   text-indent: 2em;
 }
 
-#letter ins {
+#letter em {
+  font-style: normal;
+  text-decoration: underline;
   text-decoration-style: wavy;
   text-decoration-thickness: 1px;
 }
 
-#letter ins.straight {
+#letter em.straight {
   text-decoration-style: solid;
 }
 
