--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -41,22 +41,27 @@ layout: default
 
 <div data-lang="{{ page.lang | default: 'fr' }}">
 {{ content | microtypo: 'fr_FR' }}
-</div>
 
 
-{% if page.author %}
-<div class="signature">
-  {% assign sig_url = "/assets/images/signatures/" | append: page.author | append: ".png" %}
-  <img src="{{ sig_url | relative_url }}" title="{{page.author}}" alt="{{page.author}}" />
-</div>
-{% endif %}
+  {% if page.signature %}
+  <div class="signature">
+  {{ page.signature | markdownify | microtypo 'fr_FR' }}
+  </div>
+  {% endif %}
+  {% if page.author %}
+  <div class="signature">
+    {% assign sig_url = "/assets/images/signatures/" | append: page.author | append: ".png" %}
+    <img src="{{ sig_url | relative_url }}" title="{{page.author}}" alt="{{page.author}}" />
+  </div>
+  {% endif %}
 
+  {% if page.post_scriptum %}
+  <div class="postscriptum">
+    {{ page.post_scriptum | markdownify | microtypo: 'fr_FR' }}
+  </div>
+  {% endif %}
+  </div>
 
-{% if page.post_scriptum %}
-<div class="postscriptum">
-  {{ page.post_scriptum | markdownify | microtypo: 'fr_FR' }}
-</div>
-{% endif %}
 </div>
 
 
