--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
 <div id="letter" class="fontselect">
 
 {% if page.note %}
-<div class="note">{{ page.note | markdownify | microtypo fr_FR }}</div>
+<div class="note">{{ page.note | markdownify | microtypo: 'fr_FR' }}</div>
 {% endif %}
 
 
@@ -45,7 +45,7 @@ layout: default
 
   {% if page.signature %}
   <div class="signature">
-  {{ page.signature | markdownify | microtypo 'fr_FR' }}
+  {{ page.signature | markdownify | microtypo: 'fr_FR' }}
   </div>
   {% endif %}
   {% if page.author %}
