--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -47,8 +47,7 @@ layout: default
   <div class="signature">
   {{ page.signature | markdownify | microtypo: 'fr_FR' }}
   </div>
-  {% endif %}
-  {% if page.author %}
+  {% elsif page.author %}
   <div class="signature">
     {% assign sig_url = "/assets/images/signatures/" | append: page.author | append: ".png" %}
     <img src="{{ sig_url | relative_url }}" title="{{page.author}}" alt="{{page.author}}" />
