--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
   |
 
   <span>
-    <a href="{{ site.github.repository_url }}/edit/master/docs/{{ page.path }}">Proposer une modification</a>
+    <a href="{{ site.github.repository_url }}/edit/master/docs/{{ page.path }}" title="Proposer une modification"><i class="fa fa-edit"></i></a>
   </span>
 </div>
 
