--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <div id="tools">
-  <span id="fontselect" class="fontselect" title="Choisir la police d'affichage">
-    <span class="big">Aa</span> <select>
-      <option value="script">Script</option>
-      <option value="serif">Sérif</option>
-      <option value="sans-serif">Sans Sérif</option>
+  <span id="fontselect" title="Choisir la police d'affichage">
+    <select class="fontselect">
+      <option data-font-family="script" value="script">Script</option>
+      <option data-font-family="serif" value="serif">Sérif</option>
+      <option data-font-family="sans-serif" value="sans-serif">Sans Sérif</option>
     </select>
   </span>
 
