--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -115,9 +115,10 @@ sup:before {
   font-size: 20px;
   -webkit-appearance: button;
   appearance: none;
-  background: url(https://raw.githubusercontent.com/encharm/Font-Awesome-SVG-PNG/master/black/png/16/font.png) no-repeat left #EDE4D9;
-  width: 110px;
-  padding-left: 20px;
+  background: url(https://raw.githubusercontent.com/encharm/Font-Awesome-SVG-PNG/master/black/png/22/font.png) no-repeat left #EDE4D9;
+  width: 130px;
+  padding-left: 30px;
+  font-size: 1.2em;
 }
 
 #fontselect select option {
